slider overflow fix

--- a/src/styles/blocks/_trending.scss
+++ b/src/styles/blocks/_trending.scss
@@ -22,6 +22,7 @@
     width: 100%;
     display: flex;
     margin: 0 auto;
+    overflow-x: hidden;
 
     @include onTablet {
       height: 270px;
